# krill-engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-web-app.yaml
assets/: Cargo.toml
assets/src/: lib.rs  path.rs  source.rs
assets/src/source/: desktop_fs.rs  web_request.rs
ecs/: Cargo.toml
ecs/src/: lib.rs  sparse_vec.rs  store.rs  world.rs
engine/: Cargo.toml
engine/src/: asset_resource.rs  events.rs  lib.rs  platform.rs  process.rs  resource.rs  resources.rs  surface.rs  wgpu_render.rs  winit_platform.rs  winit_surface.rs
events/src/: event.rs  handlers.rs  lib.rs  system.rs
examples/: triangle.rs
game/: Cargo.toml  README.md
game-desktop/: Cargo.toml  README.md
game-desktop/src/: main.rs
game-web/: Cargo.toml  README.md  index.html  index.scss  package-lock.json  package.json  webpack.config.js
game-web/src/: lib.rs  main.rs
game-web/web/: index.html
game/src/: lib.rs  main.rs  old-main.rs  triangle.wgsl
game/src/assets/: color-scheme.bindgroup.toml  game.pipeline.toml  game.wgsl  triangle.pipeline.toml  triangle.wgsl
meteors/: Cargo.toml  README.md  index-gh-pages.html  index.html  index.scss
meteors/src/: game.rs  graphics.rs  main.rs  text.rs
meteors/src/assets/: camera.bindgroup.toml  game.wgsl
render/: Cargo.toml
render/examples/: triangle.rs
render/examples/assets/: triangle.pipeline.toml
render/src/: bindgroup.rs  color.rs  device_context.rs  geometry.rs  lib.rs  material.rs  maybe.rs  pipeline.rs  render_api.rs  shader.rs  surface_context.rs  uniform.rs  vecbuf.rs  wgpu_context.rs
src/: ecs.rs  engine.rs  events.rs  frag_simple.wgsl  genvec.rs  lib.rs  main.rs  render.rs
utils/src/: compact_list.rs  genvec.rs  hlist.rs  lib.rs
utils/src/hlist/: fold.rs  has.rs  map.rs  shape.rs
