[package]
name = "arpg"
version = "0.1.0"
edition = "2021"

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", features = ["executor"]}
nalgebra = "0.32"
raw-window-handle = "0.5"
wgpu = "0.15"
winit = "0.28"
