[workspace]
members = [
    "assets",
    "ecs",
    "engine",
    "events",
    "meteors",
    "render",
    "utils",
]
resolver = "2"

[patch.crates-io]
# fork of pull request implementing canvas resizing
winit = { git = "https://github.com/Boothwhack/winit-css-size", branch = "resize-observer2" }
