[package]
name = "assets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
once_cell = "1.17"
regex = "1.7"
thiserror = "1.0"

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = "0.11"
