[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets = { path = "../assets" }
async-trait = "0.1"
ecs = { path = "../ecs" }
frunk = "0.4"
render = { path = "../render" }
winit = "0.27"
raw-window-handle = "0.5"
