[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets = { path = "../assets" }
async-trait = "0.1"
ecs = { path = "../ecs" }
never-say-never = "6.6.666"
render = { path = "../render" }
utils = { path = "../utils" }
winit = "0.27"
raw-window-handle = "0.5"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Gpu",
    "Location",
    "Url",
    "Window",
] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.27", features = ["rt"] }
