[package]
name = "game-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets = { path = "../assets", features = ["desktop_fs"] }
engine = { path = "../engine" }
env_logger = "0.10"
game = { path = "../game" }
tokio = { version = "1.27", features = ["full"] }
