[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
futures = { version = "0.3", features = ["executor"] }
tokio = { version = "1.27", features = ["full"] }
winit = "0.28"
