[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
float-ord = "0.3"
futures = { version = "0.3", features = ["executor"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4"
nalgebra = "0.32"
rand = "0.8"
winit = "0.27"
