[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytemuck = "1.13.1"
bytemuck_derive = "1.4.1"
futures = { version = "0.3", features = ["executor"] }
log = "0.4"
nalgebra = { version = "0.32", features = ["bytemuck"] }
raw-window-handle = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.7"
utils = { path = "../utils" }
wgpu = "0.15"

[dev-dependencies]
winit = "0.27"
tokio = { version = "1.27", features = ["full"] }
